[workspace]
members = [
    "border-core",
    "border-tensorboard",
    "border-mlflow-tracking",
    "border-py-gym-env",
    "border-tch-agent",
    "border-candle-agent",
    "border-derive",
    "border-atari-env",
    "border-async-trainer",
    "border",
]
exclude = ["docker/"]

[workspace.package]
version = "0.0.7"
edition = "2018"
rust-version = "1.70"
description = "Reinforcement learning library"
repository = "https://github.com/laboroai/border"
keywords = ["Reinforcement learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.1.5"
fastrand = "1.4.0"
tch = "0.16.0"
anyhow = "1.0.38"
crossbeam-channel = "0.5.1"
serde_yaml = "0.8.7"
aquamarine = "0.1"
log = "0.4"
dirs = "3.0.2"
thiserror = "1.0"
serde = "1.0.194"
serde_json = "^1.0.114"
numpy = "0.14.1"
env_logger = "0.8.2"
tempdir = "0.3.7"
num-traits = "0.2.14"
tensorboard-rs = "0.2.4"
pyo3 = { version = "=0.14.5", default-features = false }
ndarray = "0.15.1"
chrono = "0.4"
segment-tree = "2.0.0"
image = "0.23.14"
candle-core = { version = "=0.4.1", feature = ["cuda", "cudnn"] }
candle-nn = "0.4.1"
rand = "0.8.5"
itertools = "0.12.1"
ordered-float = "4.2.0"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
candle-optimisers = "0.4.0"