[package]
name = "border-async-trainer"
version = "0.0.5"
authors = ["Taku Yoshioka <yoshioka@laboro.ai>"]
edition = "2018"

description = "Atari environment based on gym-rs"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false

[dependencies]
anyhow = "1.0.38"
aquamarine = "0.1"
border-core = { version = "0.0.5", path = "../border-core" }
serde = { version = "=1.0.126", features = ["derive"] }
log = "0.4"
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.51"
crossbeam-channel = "0.5.1"
serde_yaml = "0.8.7"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.8.2"
test-log = "0.2.8"