[package]
name = "border-async-trainer"
version = "0.0.5"
authors = ["Taku Yoshioka <yoshioka@laboro.ai>"]
edition = "2018"
rust-version = "1.68.2"

description = "Atari environment based on gym-rs"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
border-core = { version = "0.0.5", path = "../border-core" }
border-tensorboard = { version = "0.0.5", path = "../border-tensorboard" }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.51"
crossbeam-channel = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = "0.2.8"