[package]
name = "border-async-trainer"
description = "Asynchronous trainer for Border"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
border-core = { version = "0.0.8", path = "../border-core" }
border-tensorboard = { version = "0.0.8", path = "../border-tensorboard" }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.51"
crossbeam-channel = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = "0.2.8"