[package]
name = "border-atari-env"
version = "0.0.5"
authors = ["Taku Yoshioka <taku.yoshioka.4096@gmail.com>"]
edition = "2018"

description = "Atari environment based on gym-rs"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "GPL-2.0-or-later"
readme = "README.md"
autoexamples = false

[dependencies]
anyhow = "1.0.38"
pixels = { version = "0.2.0", optional = true }
winit = { version = "0.24.0", optional = true }
dirs = "3.0.1"
border-core = { version = "0.0.5", path = "../border-core" }
image = "0.23.14"
tch = { version = "0.8.0", optional = true }
serde = { version = "=1.0.126", features = ["derive"] }
itertools = "0.10.1"
fastrand = "1.4.0"
pollster = "=0.2.4"

# The following crates are required by the code adapted from atari-env
atari-env-sys = { version = "0.1.0", optional = true }
gym-core = { version = "0.1.0" }
c_str_macro = "1.0.2"
minifb = { version = "0.19.2", optional = true }
strum = { version = "0.20.0", features = ["derive"] }
viuer = "0.4.0"
wgpu = { version = "0.7.0", optional = true }
winit_input_helper = { version = "0.9.0", optional = true }
ndarray = { version = "0.15.1", features = ["rayon"] }
num-traits = "0.2.14"
num-derive = "0.3.3"

[features]
default = ["atari-env-sys", "winit", "winit_input_helper", "wgpu", "minifb", "pixels"]
sdl = ["atari-env-sys/sdl"]
doc = []

[[example]]
name = "random_pong"
test = false

[dev-dependencies]
env_logger = "0.8.2"

[package.metadata.docs.rs]
no-default-features = true
features = ["doc"]
