[package]
name = "border-atari-env"
version = "0.0.6"
authors = ["Taku Yoshioka <yoshioka@laboro.ai>"]
edition = "2018"
rust-version = "1.68.2"

description = "Atari environment based on gym-rs"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "GPL-2.0-or-later"
readme = "README.md"
autoexamples = false

[dependencies]
anyhow = { workspace = true }
pixels = { version = "0.2.0", optional = true }
winit = { version = "0.24.0", optional = true }
dirs = { workspace = true }
border-core = { version = "0.0.6", path = "../border-core" }
image = { workspace = true }
tch = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
itertools = "0.10.1"
fastrand = { workspace = true }
pollster = "=0.2.4"

# The following crates are required by the code adapted from atari-env
atari-env-sys = { version = "0.1.0", optional = true }
gym-core = { version = "0.1.0" }
c_str_macro = "1.0.2"
minifb = { version = "0.19.2", optional = true }
strum = { version = "0.20.0", features = ["derive"] }
viuer = "0.4.0"
# wgpu = { version = "0.7.0", optional = true }
winit_input_helper = { version = "0.9.0", optional = true }
ndarray = { workspace = true, features = ["rayon"] }
num-traits = { workspace = true }
num-derive = "0.3.3"

[features]
default = [
    "atari-env-sys",
    "winit",
    "winit_input_helper",
    "minifb",
    "pixels",
    "tch",
]
sdl = ["atari-env-sys/sdl"]
doc = []

[[example]]
name = "random_pong"
test = false

[dev-dependencies]
env_logger = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
features = ["doc"]
