[package]
name = "border-atari-env"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "GPL-2.0-or-later"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
pixels = { version = "0.2.0", optional = true }
winit = { version = "0.24.0", optional = true }
dirs = { workspace = true }
border-core = { version = "0.0.8", path = "../border-core" }
image = { workspace = true }
tch = { workspace = true, optional = true }
border-tch-agent = { version = "0.0.8", path = "../border-tch-agent", optional = true }
candle-core = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
itertools = "0.10.1"
fastrand = { workspace = true }
pollster = "=0.2.4"
rand = { workspace = true }
border-candle-agent = { version = "0.0.8", path = "../border-candle-agent", optional = true }

# The following crates are required by the code adapted from atari-env
atari-env-sys = { version = "0.1.0", optional = true }
gym-core = { version = "0.1.0" }
c_str_macro = "1.0.2"
minifb = { version = "0.19.2", optional = true }
strum = { version = "0.20.0", features = ["derive"] }
viuer = "0.4.0"
# wgpu = { version = "0.7.0", optional = true }
winit_input_helper = { version = "0.9.0", optional = true }
ndarray = { workspace = true, features = ["rayon"] }
num-traits = { workspace = true }
num-derive = "0.3.3"

[features]
default = [
    "atari-env-sys",
    "winit",
    "winit_input_helper",
    "minifb",
    "pixels",
]
sdl = ["atari-env-sys/sdl"]
candle = ["border-candle-agent", "candle-core"]
tch = ["dep:tch", "border-tch-agent"]

[[example]]
name = "random_pong"
test = false

[dev-dependencies]
env_logger = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
