[package]
name = "border-candle-agent"
description = "Candle agent for Border"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.8", path = "../border-core" }
border-async-trainer = { version = "0.0.8", path = "../border-async-trainer", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tensorboard-rs = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
aquamarine = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
fastrand = { workspace = true }
segment-tree = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
candle-optimisers = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempdir = { workspace = true }

# [package.metadata.docs.rs]
# features = ["doc-only"]

# [features]
# doc-only = ["tch/doc-only"]
