[package]
name = "border-core"
version = "0.0.6"
authors = ["Taku Yoshioka <yoshioka@laboro.ai>"]
edition = "2018"
rust-version = "1.68.2"

description = "Reinforcement learning library"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
aquamarine = { workspace = true }
fastrand = { workspace = true }
segment-tree = { workspace = true }
# Consider to replace with fastrand
rand = "0.8.4"

[dev-dependencies]
tempdir = { workspace = true }
