[package]
name = "border-core"
description = "Core functionality for Border"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
aquamarine = { workspace = true }
fastrand = { workspace = true }
segment-tree = { workspace = true }
xxhash-rust = { workspace = true }
# Consider to replace with fastrand
rand = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
