[package]
name = "border-derive"
version = "0.0.5"
authors = ["Taku Yoshioka <yoshioka@laboro.ai>"]
edition = "2018"
rust-version = "1.68.2"

description = "Derive macros for observation and action in RL environments of border"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "MIT OR Apache-2.0"
# readme = "README.md"
autoexamples = false

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
tch = { workspace = true, optional = true }

[dev-dependencies]
border-tch-agent = { version = "0.0.5", path = "../border-tch-agent" }
border-py-gym-env = { version = "0.0.5", path = "../border-py-gym-env" }
border-core = { version = "0.0.5", path = "../border-core" }
ndarray = { workspace = true }
tch = { workspace = true }

[features]
default = ["tch"]

[[example]]
name = "test1"

[package.metadata.docs.rs]
features = ["doc-only"]
