[package]
name = "border-derive"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
tch = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }

[dev-dependencies]
border-tch-agent = { version = "0.0.7", path = "../border-tch-agent" }
border-candle-agent = { version = "0.0.7", path = "../border-candle-agent" }
border-py-gym-env = { version = "0.0.7", path = "../border-py-gym-env" }
border-core = { version = "0.0.7", path = "../border-core" }
border-atari-env = { version = "0.0.7", path = "../border-atari-env" }
ndarray = { workspace = true }
tch = { workspace = true }
candle-core = { workspace = true }

[package.metadata.docs.rs]
features = ["doc-only"]
