[package]
name = "border-edge-policy"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.7", path = "../border-core" }
border-tch-agent = { version = "0.0.7", path = "../border-tch-agent", optional = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
anyhow = { workspace = true }
tch = { workspace = true, optional = true }

[dev-dependencies]
tempdir = { workspace = true }
tch = { workspace = true }


[features]
border-tch-agent = ["dep:border-tch-agent", "dep:tch"]
