[package]
name = "border-minari"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.8", path = "../border-core" }
numpy = { workspace = true }
pyo3 = { workspace = true, default-features = false, features = [
    "auto-initialize",
] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
