[package]
name = "border-py-gym-env"
version = "0.0.6"
authors = ["Taku Yoshioka <yoshioka@laboro.ai>"]
edition = "2018"
rust-version = "1.68.2"

description = "Reinforcement learning library"
repository = "https://github.com/taku-y/border"
keywords = ["rl"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false

[dependencies]
border-core = { version = "0.0.6", path = "../border-core" }
numpy = { workspace = true }
pyo3 = { workspace = true, default-features = false, features = [
    "auto-initialize",
] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
tch = { workspace = true, optional = true }
image = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
env_logger = { workspace = true }
csv = { workspace = true }

[features]
default = ["tch"]

[[example]]
name = "random_cartpole"
test = true

[[example]]
name = "random_lunarlander_cont"
test = true

[[example]]
name = "random_fetch_reach"
test = false

[[example]]
name = "random_ant"
test = false        # Skip test for now, PyBullet Gym requires modify code (see Dockerfile in this repository)

[[example]]
name = "pybullet_pyo3"

[package.metadata.docs.rs]
no-default-features = true
