[package]
name = "border-py-gym-env"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.6", path = "../border-core" }
numpy = { workspace = true }
pyo3 = { workspace = true, default-features = false, features = [
    "auto-initialize",
] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
tch = { workspace = true, optional = true }
image = { workspace = true }
candle-core = { workspace = true, optional = true }

[dev-dependencies]
fastrand = { workspace = true }
env_logger = { workspace = true }
csv = { workspace = true }

# [features]
# default = ["tch"]

[[example]]
name = "random_cartpole"
test = true

[[example]]
name = "random_lunarlander_cont"
test = false # due to box2d installation issue in github action

[[example]]
name = "random_fetch_reach"
test = false

[[example]]
name = "random_ant"
test = false        # Skip test for now, PyBullet Gym requires modify code (see Dockerfile in this repository)

[[example]]
name = "pybullet_pyo3"

[package.metadata.docs.rs]
no-default-features = true
