[package]
name = "border-py-gym-env"
description = "Python Gym environment for Border"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.8", path = "../border-core" }
numpy = { workspace = true }
pyo3 = { workspace = true, default-features = false, features = [
    "auto-initialize",
] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
tch = { workspace = true, optional = true }
image = { workspace = true }
candle-core = { workspace = true, optional = true }

[dev-dependencies]
fastrand = { workspace = true }
env_logger = { workspace = true }
csv = { workspace = true }

[[example]]
name = "random_ant"
test = true
# test = false        # Skip test for now, PyBullet Gym requires modify code (see Dockerfile in this repository)

# [[example]]
# name = "pybullet_pyo3"

[package.metadata.docs.rs]
features = ["candle"]
no-default-features = true

[features]
candle = [ "candle-core" ]
