[package]
name = "border-tch-agent"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.8", path = "../border-core" }
border-async-trainer = { version = "0.0.8", path = "../border-async-trainer", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tensorboard-rs = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
aquamarine = { workspace = true }
tch = { workspace = true }
fastrand = { workspace = true }
segment-tree = { workspace = true }
num-traits = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
rand = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }

[package.metadata.docs.rs]
features = ["doc-only"]

[features]
doc-only = ["tch/doc-only"]
