[package]
name = "border-tensorboard"
description = "Tensorboard for Border"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
border-core = { version = "0.0.8", path = "../border-core" }
tensorboard-rs = { workspace = true }
anyhow = { workspace = true }